added smooth scrolling

--- a/style.css
+++ b/style.css
@@ -30,9 +30,14 @@ body {
 .nav-link:hover {
   color: rgb(109, 109, 109);
 }
-.wrapper {
+.wrapper,
+.big-projects,
+.small-projects,
+.css-design,
+.javascript {
   margin-top: 20vh;
   color: rgba(91, 136, 32, 0.753);
+  height: 90vh;
 }
 .projects-grid {
   display: grid;
