--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@ body {
 .wrapper {
   color: rgba(91, 136, 32, 0.753);
   height: 90vh;
+  background-image: url(/img/wallpaper.jpg);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .big-projects,
@@ -43,13 +47,18 @@ body {
   height: 100vh;
 }
 .projects-grid {
-  display: grid;
-  justify-content: center;
-  align-content: center;
-  grid-template-columns: repeat(2, 200px);
-  grid-template-rows: repeat(2, 250px);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: auto;
+  width: 80%;
 }
-.project {
-  border: solid 1px black;
-  margin: 10px;
+
+.prj-btn {
+  width: 100px;
+  height: 50px;
+  background-color: rgba(91, 136, 32, 1);
+  border: none;
+  border-radius: 7%;
+  color: rgba(214, 214, 214, 0.774);
 }
